# family-task-hub

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLERK_AUTH_GUIDE.md  README.md  build.sh  docker-compose.override.yml  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.dev.yml  setup.sh
.devcontainer/backend/: Dockerfile  devcontainer.json  setup.sh
.devcontainer/frontend/: Dockerfile  devcontainer.json  post-create-frontend.sh
backend/: .editorconfig  .pre-commit-config.yaml  .vscode  Dockerfile  database.db  entrypoint.sh  pyproject.toml
backend/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh  setup.sh
backend/migrations/: env.py
backend/migrations/versions/: 19b255b59aed_add_image_url_to_user.py  78c05d3c3a4f_init.py  9d1240685544_.py  d73289e99e19_add_clerk_id_to_users.py
backend/src/: main.py
backend/src/api/: deps.py
backend/src/api/routes/: heroes.py  tasks.py  users.py  webhooks.py
backend/src/core/: celery.py  config.py  db.py  deps.py
backend/src/models/: tasks.py  users.py
backend/src/scripts/: sync_clerk_users.py
backend/src/tasks/: email_sender.py
backend/src/webhooks/: handlers.py
backend/tests/users/: test_users.py
frontend/: .editorconfig  Dockerfile  biome.json  entrypoint.sh  feature-requests.md  package.json  tsconfig.app.json  vite.config.ts
frontend/.devcontainer/: devcontainer.json  post-create-frontend.sh
frontend/src/: App.tsx  main.tsx
frontend/src/common/hooks/: useCategories.ts  useMembers.ts
frontend/src/components/: ModeToggleButton.tsx  Navbar.tsx
frontend/src/hooks/: tasks.ts  useCategory.ts  useTasks.ts
frontend/src/pages/: TaskList.tsx  TasksPage.tsx
frontend/src/services/: apiClient.ts  categoryService.ts  httpService.ts  taskService.ts
(+69 files in other folders)
